--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
 <html>
     <head>
         <title>Porsche 911 Tarihçe</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <h1> Porsche 911 Tarihçe</h1>
-
+        <div>
+            <a href="index.html"> Ana Sayfa </a>
+            <a href="hakkımızda.html">Hakkımızda</a>
+            <a href="iletişim.html">İletişim</a>
+        </div>
         <p> Porsche 911, Alman otomobil üreticisi Porsche tarafından 40 yıldan uzun bir süredir üretilen yüksek performanslı spor otomobil serisi. Bu ünlü, farklı ve dayanıklı modeller ilk üretildiği 1964[1] yılından sonra sürekli bir gelişim içinde olmuştur. İlk modelden itibaren tüm araçlar arkadan motorlu, arkadan itişli (1989'dan sonra 4 çeker modeller yapılmıştır 2+2 gövde stilinde, hava soğutmalı (1999'da 996 kasasından sonra su soğutma) boksör motorludur. Porsche 911, Ford Model T, Mini, Citroën DS ve Volkswagen Beetle'dan sonra en çok ödül kazanan otomobil modelidir.</p>
         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a2/Porsche_911_No_1000000%2C_70_Years_Porsche_Sports_Car%2C_Berlin_%281X7A3888%29.jpg/435px-Porsche_911_No_1000000%2C_70_Years_Porsche_Sports_Car%2C_Berlin_%281X7A3888%29.jpg" alt=""/>
     </body>
